2004-02-05  JP Rosevear <jpr@ximian.com>

	* gui/dialogs/cal-prefs-dialog.c (set_color_picker): make failure
	not so draconian - make the color black

	Fixes #53547
	
2004-02-05  Kidd Wang  <kidd.wang@sun.com>

	* gui/goto-dialog.glade: add a mnemonic for the 'Go to Today' button
	in the 'Go To Date' dialog.

2004-02-05  Sarfraaz Ahmed <asarfraaz@novell.com>

        Fixes #53388

        * gui/e-itip-control.c (get_next): added a check for NULL

2004-02-04  JP Rosevear <jpr@ximian.com>

	* importers/icalendar-importer.c (gnome_calendar_import_data_fn):
	use new cal auth functions

	* common/authentication.c (auth_new_cal_from_default): get a
	default calendar with auth

	* common/authentication.h: add proto

2004-02-04  JP Rosevear <jpr@ximian.com>

	* importers/icalendar-importer.c (importer_destroy_cb): we only
	have a single client to free
	(prepare_events): make the vtodo list optional
	(button_toggled_cb): handle the type of thing to import switching
	(primary_selection_changed_cb): handle the selected item switching
	(create_control_fn): create a control with types (events, tasks)
	and corresponding source selectors
	(process_item_fn): only import one type of item at a time
	(load_file_fn): load the ecal as dictated by the source and type
	(vcal_importer_new): pass in control function
	(gnome_calendar_import_data_fn): get the default calendars

	* importers/Makefile.am (importersdir): add lib

2004-02-04  Rodrigo Moya <rodrigo@ximian.com>

	Fixes #52970

	* idl/evolution-calendar.idl: added back the AlarmNotify interface.

	* gui/alarm-notify/GNOME_Evolution_Calendar_AlarmNotify.server.in.in:
	changed to have the AlarmNotify component be created via a factory.

	* gui/alarm-notify/alarm-notify.[ch]: converted to implement the
	AlarmNotify interface.

	* gui/alarm-notify/notify-main.c (main): register the factory with
	bonobo_generic_factory_new, not the object itself. Removed redundant
	call to bonobo_object_unref. Call e_passwords_shutdown on exit.
